// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 1`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(1)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(3)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
            "root": Object {
              "cid": "cids(0)",
              "uri": "record(0)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {},
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(5)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(1)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "cid": "cids(9)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(7)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(10)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "fullsize": "https://pds.public.url/image/IBdh1uYxiSsHAl6Ai0aAwpmO_JdnuNJhb12PSD5ZNYg/rs:fit:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
            "thumb": "https://pds.public.url/image/ELecCwtuiF4W0nLWO5UVRtmQlq7vpFDN8GuZtHB1cBc/rs:fit:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-portrait-small.jpg",
              "image": Object {
                "cid": "cids(11)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(8)",
      "viewer": Object {
        "upvote": "record(9)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(12)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(10)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(13)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(11)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 2`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "handle": "dan.test",
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {},
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(1)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(3)",
              "uri": "record(2)",
            },
            "root": Object {
              "cid": "cids(3)",
              "uri": "record(2)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(3)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(2)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(2)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(2)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(2)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(2)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(2)",
        "viewer": Object {
          "upvote": "record(4)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(6)",
      "viewer": Object {
        "downvote": "record(7)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(8)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(3)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(2)",
      "viewer": Object {
        "upvote": "record(4)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(9)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "fullsize": "https://pds.public.url/image/IBdh1uYxiSsHAl6Ai0aAwpmO_JdnuNJhb12PSD5ZNYg/rs:fit:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
            "thumb": "https://pds.public.url/image/ELecCwtuiF4W0nLWO5UVRtmQlq7vpFDN8GuZtHB1cBc/rs:fit:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-portrait-small.jpg",
              "image": Object {
                "cid": "cids(10)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(9)",
      "viewer": Object {
        "upvote": "record(10)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(3)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(11)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(11)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(12)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(12)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 3`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "handle": "dan.test",
      },
      "cid": "cids(0)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(1)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(1)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(4)",
            "uri": "record(4)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "thanks bob",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(2)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(3)",
          "displayName": "bobby",
          "handle": "bob.test",
        },
        "cid": "cids(4)",
        "downvoteCount": 0,
        "embed": Object {
          "$type": "app.bsky.embed.images#presented",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
              "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            },
          ],
        },
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "embed": Object {
            "$type": "app.bsky.embed.images",
            "images": Array [
              Object {
                "alt": "tests/image/fixtures/key-landscape-small.jpg",
                "image": Object {
                  "cid": "cids(5)",
                  "mimeType": "image/jpeg",
                },
              },
            ],
          },
          "reply": Object {
            "parent": Object {
              "cid": "cids(3)",
              "uri": "record(3)",
            },
            "root": Object {
              "cid": "cids(3)",
              "uri": "record(3)",
            },
          },
          "text": "hear that",
        },
        "replyCount": 1,
        "repostCount": 0,
        "upvoteCount": 0,
        "uri": "record(4)",
        "viewer": Object {},
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": Object {
          "downvote": "record(5)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "reply": Object {
          "parent": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
          "root": Object {
            "cid": "cids(3)",
            "uri": "record(3)",
          },
        },
        "text": "of course",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": Object {
          "downvote": "record(5)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(1)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(3)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(3)",
        "viewer": Object {
          "downvote": "record(5)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(7)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "yoohoo",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 1,
      "uri": "record(7)",
      "viewer": Object {
        "upvote": "record(8)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(3)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(3)",
      "viewer": Object {
        "downvote": "record(5)",
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "handle": "carol.test",
      },
      "cid": "cids(8)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
          Object {
            "alt": "tests/image/fixtures/key-portrait-small.jpg",
            "fullsize": "https://pds.public.url/image/IBdh1uYxiSsHAl6Ai0aAwpmO_JdnuNJhb12PSD5ZNYg/rs:fit:500:500:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
            "thumb": "https://pds.public.url/image/ELecCwtuiF4W0nLWO5UVRtmQlq7vpFDN8GuZtHB1cBc/rs:fit:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(5)",
                "mimeType": "image/jpeg",
              },
            },
            Object {
              "alt": "tests/image/fixtures/key-portrait-small.jpg",
              "image": Object {
                "cid": "cids(9)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "text": "hi im carol",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 2,
      "uri": "record(9)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(10)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "hey there",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(10)",
      "viewer": Object {},
    },
  },
]
`;

exports[`timeline views fetches authenticated user's home feed w/ reverse-chronological algorithm 4`] = `
Array [
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(0)",
        "displayName": "ali",
        "handle": "alice.test",
      },
      "cid": "cids(0)",
      "downvoteCount": 1,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "again",
      },
      "replyCount": 2,
      "repostCount": 1,
      "upvoteCount": 2,
      "uri": "record(0)",
      "viewer": Object {
        "repost": "record(1)",
        "upvote": "record(2)",
      },
    },
    "reason": Object {
      "$type": "app.bsky.feed.feedViewPost#reasonRepost",
      "by": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(2)",
      "downvoteCount": 0,
      "embed": Object {
        "$type": "app.bsky.embed.images#presented",
        "images": Array [
          Object {
            "alt": "tests/image/fixtures/key-landscape-small.jpg",
            "fullsize": "https://pds.public.url/image/IPAYhVzUxU3OXfF-R2hr1eYlq5BAbioC9U2pHmZpwi0/rs:fit:500:500:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
            "thumb": "https://pds.public.url/image/oyYvmnCYEULJ70JgyQHrekEVfqR3bfHMucQ7p7yXhvQ/rs:fit:250:250:1:0/plain/bafkreigy5p3xxceipk2o6nqtnugpft26ol6yleqhboqziino7axvdngtci@jpeg",
          },
        ],
      },
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "embed": Object {
          "$type": "app.bsky.embed.images",
          "images": Array [
            Object {
              "alt": "tests/image/fixtures/key-landscape-small.jpg",
              "image": Object {
                "cid": "cids(3)",
                "mimeType": "image/jpeg",
              },
            },
          ],
        },
        "reply": Object {
          "parent": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
          "root": Object {
            "cid": "cids(0)",
            "uri": "record(0)",
          },
        },
        "text": "hear that",
      },
      "replyCount": 1,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(3)",
      "viewer": Object {},
    },
    "reply": Object {
      "parent": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {
          "repost": "record(1)",
          "upvote": "record(2)",
        },
      },
      "root": Object {
        "author": Object {
          "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
          "declaration": Object {
            "actorType": "app.bsky.system.actorUser",
            "cid": "cids(1)",
          },
          "did": "user(0)",
          "displayName": "ali",
          "handle": "alice.test",
        },
        "cid": "cids(0)",
        "downvoteCount": 1,
        "indexedAt": "1970-01-01T00:00:00.000Z",
        "record": Object {
          "$type": "app.bsky.feed.post",
          "createdAt": "1970-01-01T00:00:00.000Z",
          "text": "again",
        },
        "replyCount": 2,
        "repostCount": 1,
        "upvoteCount": 2,
        "uri": "record(0)",
        "viewer": Object {
          "repost": "record(1)",
          "upvote": "record(2)",
        },
      },
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(4)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bobby boy here",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(4)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "cid": "cids(5)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "entities": Array [
          Object {
            "index": Object {
              "end": 18,
              "start": 0,
            },
            "type": "mention",
            "value": "user(0)",
          },
        ],
        "text": "@alice.bluesky.xyz is the best",
      },
      "replyCount": 0,
      "repostCount": 1,
      "upvoteCount": 0,
      "uri": "record(5)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(1)",
        "handle": "dan.test",
      },
      "cid": "cids(6)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "dan here!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(6)",
      "viewer": Object {},
    },
  },
  Object {
    "post": Object {
      "author": Object {
        "avatar": "https://pds.public.url/image/w4t9ji0l53vlWd7Res2ZSFAL6QS2iaI9RGCt6Gs5reE/rs:fill:250:250:1:0/plain/bafkreiaivizp4xldojmmpuzmiu75cmea7nq56dnntnuhzhsjcb63aou5ei@jpeg",
        "declaration": Object {
          "actorType": "app.bsky.system.actorUser",
          "cid": "cids(1)",
        },
        "did": "user(2)",
        "displayName": "bobby",
        "handle": "bob.test",
      },
      "cid": "cids(7)",
      "downvoteCount": 0,
      "indexedAt": "1970-01-01T00:00:00.000Z",
      "record": Object {
        "$type": "app.bsky.feed.post",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "text": "bob back at it again!",
      },
      "replyCount": 0,
      "repostCount": 0,
      "upvoteCount": 0,
      "uri": "record(7)",
      "viewer": Object {},
    },
  },
]
`;
